[package]
name = "auther"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
rand = "0.8"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.5", features = ["serde"] }
data-encoding = "2.3"    # Base32编码/解码
image = "0.24"          # 图像处理
qrcode = "0.13"         # QR码生成
quircs = "0.10"          # QR码解码
url = "2.2"             # URL解析
hmac = "0.12"
sha1 = "0.10"
crossterm = "0.27"      # 终端操作
ratatui = "0.23"        # TUI界面
